Adds functionality and feature testing for comedian/new

--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,1 +1,12 @@
-hey
+<header>
+  <h1>Add New Comedian</h1>
+</header>
+
+<section id="add-new-comedian-form">
+  <form class="add-new" action="/comedians" method="post">
+    <p>Name: <input type="text" name="name"></p>
+    <p>Age: <input type="number" name="age"></p>
+    <p>Home Town: <input type="text" name="hometown"></p>
+    <input type="submit" value="Submit">
+  </form>
+</section>
