Adds show all button to home page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,6 +11,10 @@
         <input type="text" name="age">
         <input type="submit" value="Submit">
       </form>
+      <a>Show All</a>
+      <form class="show" action="/comedians" method="get">
+        <input type="submit" value="Submit">
+      </form>
       <a>Add New Comedian</a>
       <form class="add-new" action="/comedians/new" method="get">
         <input type="submit" value="Submit">
